miniJava_yacc/y.output
   0  $accept : Goal $end

   1  Goal : MainClass ClassDeclarations

   2  MainClass : Class Identifier Lbrace Public Static Void Main LBracket String Laccess Raccess Identifier RBracket Lbrace Statement Rbrace Rbrace

   3  ClassDeclarationList : ClassDeclaration
   4                       | ClassDeclarationList ClassDeclaration

   5  ClassDeclarations :
   6                    | ClassDeclarationList

   7  ClassDeclaration : Class Identifier ExtendOpt Lbrace VarDeclarations MethodDeclarations Rbrace

   8  ExtendOpt :
   9            | Extends Identifier

  10  VarDeclarations :
  11                  | VarDeclarations VarDeclaration

  12  VarDeclaration : Type Identifier Semicolon

  13  MethodDeclarations :
  14                     | MethodDeclarationList

  15  MethodDeclarationList : MethodDeclaration
  16                        | MethodDeclarationList MethodDeclaration

  17  MethodDeclaration : Public Type Identifier LBracket TypeIdentifiers RBracket Lbrace VarDeclarations Statements Return Expression Semicolon Rbrace

  18  TypeIdentifiers :
  19                  | TypeIdentifierList

  20  TypeIdentifierList : TypeIdentifier
  21                     | TypeIdentifierList Comma TypeIdentifier

  22  TypeIdentifier : Type Identifier

  23  Statements :
  24             | StatementList

  25  StatementList : Statement
  26                | StatementList Statement

  27  Type : Integer
  28       | Integer Laccess Raccess
  29       | Boolean
  30       | Identifier

  31  Statement : Lbrace Statements Rbrace
  32            | If LBracket Expression RBracket Statement Else Statement
  33            | While LBracket Expression RBracket Statement
  34            | Println LBracket Expression RBracket Semicolon
  35            | Identifier '=' Expression Semicolon
  36            | Identifier Laccess Expression Raccess '=' Expression Semicolon

  37  Expressions :
  38              | ExpressionList

  39  ExpressionList : Expression
  40                 | ExpressionList Comma Expression

  41  Expression : Expression And Expression
  42             | Expression '<' Expression
  43             | Expression '+' Expression
  44             | Expression '-' Expression
  45             | Expression '*' Expression
  46             | Expression Laccess Expression Raccess
  47             | Expression '.' Length
  48             | Expression '.' Identifier LBracket Expressions RBracket
  49             | True
  50             | False
  51             | Identifier
  52             | This
  53             | New Integer Laccess Expression Raccess
  54             | New Identifier LBracket RBracket
  55             | '!' Expression
  56             | LBracket Expression RBracket
  57             | IntegerIteral

  58  Identifier : Id

state 0
	$accept : . Goal $end  (0)

	Class  shift 1
	.  error

	Goal  goto 2
	MainClass  goto 3


state 1
	MainClass : Class . Identifier Lbrace Public Static Void Main LBracket String Laccess Raccess Identifier RBracket Lbrace Statement Rbrace Rbrace  (2)

	Id  shift 4
	.  error

	Identifier  goto 5


state 2
	$accept : Goal . $end  (0)

	$end  accept


state 3
	Goal : MainClass . ClassDeclarations  (1)
	ClassDeclarations : .  (5)

	Class  shift 6
	$end  reduce 5

	ClassDeclarations  goto 7
	ClassDeclarationList  goto 8
	ClassDeclaration  goto 9


state 4
	Identifier : Id .  (58)

	.  reduce 58


state 5
	MainClass : Class Identifier . Lbrace Public Static Void Main LBracket String Laccess Raccess Identifier RBracket Lbrace Statement Rbrace Rbrace  (2)

	Lbrace  shift 10
	.  error


state 6
	ClassDeclaration : Class . Identifier ExtendOpt Lbrace VarDeclarations MethodDeclarations Rbrace  (7)

	Id  shift 4
	.  error

	Identifier  goto 11


state 7
	Goal : MainClass ClassDeclarations .  (1)

	.  reduce 1


state 8
	ClassDeclarationList : ClassDeclarationList . ClassDeclaration  (4)
	ClassDeclarations : ClassDeclarationList .  (6)

	Class  shift 6
	$end  reduce 6

	ClassDeclaration  goto 12


state 9
	ClassDeclarationList : ClassDeclaration .  (3)

	.  reduce 3


state 10
	MainClass : Class Identifier Lbrace . Public Static Void Main LBracket String Laccess Raccess Identifier RBracket Lbrace Statement Rbrace Rbrace  (2)

	Public  shift 13
	.  error


state 11
	ClassDeclaration : Class Identifier . ExtendOpt Lbrace VarDeclarations MethodDeclarations Rbrace  (7)
	ExtendOpt : .  (8)

	Extends  shift 14
	Lbrace  reduce 8

	ExtendOpt  goto 15


state 12
	ClassDeclarationList : ClassDeclarationList ClassDeclaration .  (4)

	.  reduce 4


state 13
	MainClass : Class Identifier Lbrace Public . Static Void Main LBracket String Laccess Raccess Identifier RBracket Lbrace Statement Rbrace Rbrace  (2)

	Static  shift 16
	.  error


state 14
	ExtendOpt : Extends . Identifier  (9)

	Id  shift 4
	.  error

	Identifier  goto 17


state 15
	ClassDeclaration : Class Identifier ExtendOpt . Lbrace VarDeclarations MethodDeclarations Rbrace  (7)

	Lbrace  shift 18
	.  error


state 16
	MainClass : Class Identifier Lbrace Public Static . Void Main LBracket String Laccess Raccess Identifier RBracket Lbrace Statement Rbrace Rbrace  (2)

	Void  shift 19
	.  error


state 17
	ExtendOpt : Extends Identifier .  (9)

	.  reduce 9


state 18
	ClassDeclaration : Class Identifier ExtendOpt Lbrace . VarDeclarations MethodDeclarations Rbrace  (7)
	VarDeclarations : .  (10)

	.  reduce 10

	VarDeclarations  goto 20


state 19
	MainClass : Class Identifier Lbrace Public Static Void . Main LBracket String Laccess Raccess Identifier RBracket Lbrace Statement Rbrace Rbrace  (2)

	Main  shift 21
	.  error


state 20
	ClassDeclaration : Class Identifier ExtendOpt Lbrace VarDeclarations . MethodDeclarations Rbrace  (7)
	VarDeclarations : VarDeclarations . VarDeclaration  (11)
	MethodDeclarations : .  (13)

	Public  shift 22
	Integer  shift 23
	Boolean  shift 24
	Id  shift 4
	Rbrace  reduce 13

	Identifier  goto 25
	Type  goto 26
	VarDeclaration  goto 27
	MethodDeclarations  goto 28
	MethodDeclarationList  goto 29
	MethodDeclaration  goto 30


state 21
	MainClass : Class Identifier Lbrace Public Static Void Main . LBracket String Laccess Raccess Identifier RBracket Lbrace Statement Rbrace Rbrace  (2)

	LBracket  shift 31
	.  error


state 22
	MethodDeclaration : Public . Type Identifier LBracket TypeIdentifiers RBracket Lbrace VarDeclarations Statements Return Expression Semicolon Rbrace  (17)

	Integer  shift 23
	Boolean  shift 24
	Id  shift 4
	.  error

	Identifier  goto 25
	Type  goto 32


state 23
	Type : Integer .  (27)
	Type : Integer . Laccess Raccess  (28)

	Laccess  shift 33
	Id  reduce 27


state 24
	Type : Boolean .  (29)

	.  reduce 29


state 25
	Type : Identifier .  (30)

	.  reduce 30


state 26
	VarDeclaration : Type . Identifier Semicolon  (12)

	Id  shift 4
	.  error

	Identifier  goto 34


state 27
	VarDeclarations : VarDeclarations VarDeclaration .  (11)

	.  reduce 11


state 28
	ClassDeclaration : Class Identifier ExtendOpt Lbrace VarDeclarations MethodDeclarations . Rbrace  (7)

	Rbrace  shift 35
	.  error


state 29
	MethodDeclarations : MethodDeclarationList .  (14)
	MethodDeclarationList : MethodDeclarationList . MethodDeclaration  (16)

	Public  shift 22
	Rbrace  reduce 14

	MethodDeclaration  goto 36


state 30
	MethodDeclarationList : MethodDeclaration .  (15)

	.  reduce 15


state 31
	MainClass : Class Identifier Lbrace Public Static Void Main LBracket . String Laccess Raccess Identifier RBracket Lbrace Statement Rbrace Rbrace  (2)

	String  shift 37
	.  error


state 32
	MethodDeclaration : Public Type . Identifier LBracket TypeIdentifiers RBracket Lbrace VarDeclarations Statements Return Expression Semicolon Rbrace  (17)

	Id  shift 4
	.  error

	Identifier  goto 38


state 33
	Type : Integer Laccess . Raccess  (28)

	Raccess  shift 39
	.  error


state 34
	VarDeclaration : Type Identifier . Semicolon  (12)

	Semicolon  shift 40
	.  error


state 35
	ClassDeclaration : Class Identifier ExtendOpt Lbrace VarDeclarations MethodDeclarations Rbrace .  (7)

	.  reduce 7


state 36
	MethodDeclarationList : MethodDeclarationList MethodDeclaration .  (16)

	.  reduce 16


state 37
	MainClass : Class Identifier Lbrace Public Static Void Main LBracket String . Laccess Raccess Identifier RBracket Lbrace Statement Rbrace Rbrace  (2)

	Laccess  shift 41
	.  error


state 38
	MethodDeclaration : Public Type Identifier . LBracket TypeIdentifiers RBracket Lbrace VarDeclarations Statements Return Expression Semicolon Rbrace  (17)

	LBracket  shift 42
	.  error


state 39
	Type : Integer Laccess Raccess .  (28)

	.  reduce 28


state 40
	VarDeclaration : Type Identifier Semicolon .  (12)

	.  reduce 12


state 41
	MainClass : Class Identifier Lbrace Public Static Void Main LBracket String Laccess . Raccess Identifier RBracket Lbrace Statement Rbrace Rbrace  (2)

	Raccess  shift 43
	.  error


state 42
	MethodDeclaration : Public Type Identifier LBracket . TypeIdentifiers RBracket Lbrace VarDeclarations Statements Return Expression Semicolon Rbrace  (17)
	TypeIdentifiers : .  (18)

	Integer  shift 23
	Boolean  shift 24
	Id  shift 4
	RBracket  reduce 18

	Identifier  goto 25
	Type  goto 44
	TypeIdentifiers  goto 45
	TypeIdentifierList  goto 46
	TypeIdentifier  goto 47


state 43
	MainClass : Class Identifier Lbrace Public Static Void Main LBracket String Laccess Raccess . Identifier RBracket Lbrace Statement Rbrace Rbrace  (2)

	Id  shift 4
	.  error

	Identifier  goto 48


state 44
	TypeIdentifier : Type . Identifier  (22)

	Id  shift 4
	.  error

	Identifier  goto 49


state 45
	MethodDeclaration : Public Type Identifier LBracket TypeIdentifiers . RBracket Lbrace VarDeclarations Statements Return Expression Semicolon Rbrace  (17)

	RBracket  shift 50
	.  error


state 46
	TypeIdentifiers : TypeIdentifierList .  (19)
	TypeIdentifierList : TypeIdentifierList . Comma TypeIdentifier  (21)

	Comma  shift 51
	RBracket  reduce 19


state 47
	TypeIdentifierList : TypeIdentifier .  (20)

	.  reduce 20


state 48
	MainClass : Class Identifier Lbrace Public Static Void Main LBracket String Laccess Raccess Identifier . RBracket Lbrace Statement Rbrace Rbrace  (2)

	RBracket  shift 52
	.  error


state 49
	TypeIdentifier : Type Identifier .  (22)

	.  reduce 22


state 50
	MethodDeclaration : Public Type Identifier LBracket TypeIdentifiers RBracket . Lbrace VarDeclarations Statements Return Expression Semicolon Rbrace  (17)

	Lbrace  shift 53
	.  error


state 51
	TypeIdentifierList : TypeIdentifierList Comma . TypeIdentifier  (21)

	Integer  shift 23
	Boolean  shift 24
	Id  shift 4
	.  error

	Identifier  goto 25
	Type  goto 44
	TypeIdentifier  goto 54


state 52
	MainClass : Class Identifier Lbrace Public Static Void Main LBracket String Laccess Raccess Identifier RBracket . Lbrace Statement Rbrace Rbrace  (2)

	Lbrace  shift 55
	.  error


state 53
	MethodDeclaration : Public Type Identifier LBracket TypeIdentifiers RBracket Lbrace . VarDeclarations Statements Return Expression Semicolon Rbrace  (17)
	VarDeclarations : .  (10)

	.  reduce 10

	VarDeclarations  goto 56


state 54
	TypeIdentifierList : TypeIdentifierList Comma TypeIdentifier .  (21)

	.  reduce 21


state 55
	MainClass : Class Identifier Lbrace Public Static Void Main LBracket String Laccess Raccess Identifier RBracket Lbrace . Statement Rbrace Rbrace  (2)

	If  shift 57
	While  shift 58
	Id  shift 4
	Println  shift 59
	Lbrace  shift 60
	.  error

	Identifier  goto 61
	Statement  goto 62


state 56
	VarDeclarations : VarDeclarations . VarDeclaration  (11)
	MethodDeclaration : Public Type Identifier LBracket TypeIdentifiers RBracket Lbrace VarDeclarations . Statements Return Expression Semicolon Rbrace  (17)
	Statements : .  (23)

	If  shift 57
	While  shift 58
	Integer  shift 23
	Boolean  shift 24
	Id  shift 4
	Println  shift 59
	Lbrace  shift 60
	Return  reduce 23

	Identifier  goto 63
	Type  goto 26
	VarDeclaration  goto 27
	Statements  goto 64
	StatementList  goto 65
	Statement  goto 66


state 57
	Statement : If . LBracket Expression RBracket Statement Else Statement  (32)

	LBracket  shift 67
	.  error


state 58
	Statement : While . LBracket Expression RBracket Statement  (33)

	LBracket  shift 68
	.  error


state 59
	Statement : Println . LBracket Expression RBracket Semicolon  (34)

	LBracket  shift 69
	.  error


state 60
	Statement : Lbrace . Statements Rbrace  (31)
	Statements : .  (23)

	If  shift 57
	While  shift 58
	Id  shift 4
	Println  shift 59
	Lbrace  shift 60
	Rbrace  reduce 23

	Identifier  goto 61
	Statements  goto 70
	StatementList  goto 65
	Statement  goto 66


state 61
	Statement : Identifier . '=' Expression Semicolon  (35)
	Statement : Identifier . Laccess Expression Raccess '=' Expression Semicolon  (36)

	Laccess  shift 71
	'='  shift 72
	.  error


state 62
	MainClass : Class Identifier Lbrace Public Static Void Main LBracket String Laccess Raccess Identifier RBracket Lbrace Statement . Rbrace Rbrace  (2)

	Rbrace  shift 73
	.  error


state 63
	Type : Identifier .  (30)
	Statement : Identifier . '=' Expression Semicolon  (35)
	Statement : Identifier . Laccess Expression Raccess '=' Expression Semicolon  (36)

	Laccess  shift 71
	'='  shift 72
	Id  reduce 30


state 64
	MethodDeclaration : Public Type Identifier LBracket TypeIdentifiers RBracket Lbrace VarDeclarations Statements . Return Expression Semicolon Rbrace  (17)

	Return  shift 74
	.  error


state 65
	Statements : StatementList .  (24)
	StatementList : StatementList . Statement  (26)

	If  shift 57
	While  shift 58
	Id  shift 4
	Println  shift 59
	Lbrace  shift 60
	Return  reduce 24
	Rbrace  reduce 24

	Identifier  goto 61
	Statement  goto 75


state 66
	StatementList : Statement .  (25)

	.  reduce 25


state 67
	Statement : If LBracket . Expression RBracket Statement Else Statement  (32)

	True  shift 76
	False  shift 77
	Id  shift 4
	IntegerIteral  shift 78
	This  shift 79
	New  shift 80
	LBracket  shift 81
	'!'  shift 82
	.  error

	Identifier  goto 83
	Expression  goto 84


state 68
	Statement : While LBracket . Expression RBracket Statement  (33)

	True  shift 76
	False  shift 77
	Id  shift 4
	IntegerIteral  shift 78
	This  shift 79
	New  shift 80
	LBracket  shift 81
	'!'  shift 82
	.  error

	Identifier  goto 83
	Expression  goto 85


state 69
	Statement : Println LBracket . Expression RBracket Semicolon  (34)

	True  shift 76
	False  shift 77
	Id  shift 4
	IntegerIteral  shift 78
	This  shift 79
	New  shift 80
	LBracket  shift 81
	'!'  shift 82
	.  error

	Identifier  goto 83
	Expression  goto 86


state 70
	Statement : Lbrace Statements . Rbrace  (31)

	Rbrace  shift 87
	.  error


state 71
	Statement : Identifier Laccess . Expression Raccess '=' Expression Semicolon  (36)

	True  shift 76
	False  shift 77
	Id  shift 4
	IntegerIteral  shift 78
	This  shift 79
	New  shift 80
	LBracket  shift 81
	'!'  shift 82
	.  error

	Identifier  goto 83
	Expression  goto 88


state 72
	Statement : Identifier '=' . Expression Semicolon  (35)

	True  shift 76
	False  shift 77
	Id  shift 4
	IntegerIteral  shift 78
	This  shift 79
	New  shift 80
	LBracket  shift 81
	'!'  shift 82
	.  error

	Identifier  goto 83
	Expression  goto 89


state 73
	MainClass : Class Identifier Lbrace Public Static Void Main LBracket String Laccess Raccess Identifier RBracket Lbrace Statement Rbrace . Rbrace  (2)

	Rbrace  shift 90
	.  error


state 74
	MethodDeclaration : Public Type Identifier LBracket TypeIdentifiers RBracket Lbrace VarDeclarations Statements Return . Expression Semicolon Rbrace  (17)

	True  shift 76
	False  shift 77
	Id  shift 4
	IntegerIteral  shift 78
	This  shift 79
	New  shift 80
	LBracket  shift 81
	'!'  shift 82
	.  error

	Identifier  goto 83
	Expression  goto 91


state 75
	StatementList : StatementList Statement .  (26)

	.  reduce 26


state 76
	Expression : True .  (49)

	.  reduce 49


state 77
	Expression : False .  (50)

	.  reduce 50


state 78
	Expression : IntegerIteral .  (57)

	.  reduce 57


state 79
	Expression : This .  (52)

	.  reduce 52


state 80
	Expression : New . Integer Laccess Expression Raccess  (53)
	Expression : New . Identifier LBracket RBracket  (54)

	Integer  shift 92
	Id  shift 4
	.  error

	Identifier  goto 93


state 81
	Expression : LBracket . Expression RBracket  (56)

	True  shift 76
	False  shift 77
	Id  shift 4
	IntegerIteral  shift 78
	This  shift 79
	New  shift 80
	LBracket  shift 81
	'!'  shift 82
	.  error

	Identifier  goto 83
	Expression  goto 94


state 82
	Expression : '!' . Expression  (55)

	True  shift 76
	False  shift 77
	Id  shift 4
	IntegerIteral  shift 78
	This  shift 79
	New  shift 80
	LBracket  shift 81
	'!'  shift 82
	.  error

	Identifier  goto 83
	Expression  goto 95


state 83
	Expression : Identifier .  (51)

	.  reduce 51


state 84
	Statement : If LBracket Expression . RBracket Statement Else Statement  (32)
	Expression : Expression . And Expression  (41)
	Expression : Expression . '<' Expression  (42)
	Expression : Expression . '+' Expression  (43)
	Expression : Expression . '-' Expression  (44)
	Expression : Expression . '*' Expression  (45)
	Expression : Expression . Laccess Expression Raccess  (46)
	Expression : Expression . '.' Length  (47)
	Expression : Expression . '.' Identifier LBracket Expressions RBracket  (48)

	And  shift 96
	RBracket  shift 97
	Laccess  shift 98
	'.'  shift 99
	'*'  shift 100
	'+'  shift 101
	'-'  shift 102
	'<'  shift 103
	.  error


state 85
	Statement : While LBracket Expression . RBracket Statement  (33)
	Expression : Expression . And Expression  (41)
	Expression : Expression . '<' Expression  (42)
	Expression : Expression . '+' Expression  (43)
	Expression : Expression . '-' Expression  (44)
	Expression : Expression . '*' Expression  (45)
	Expression : Expression . Laccess Expression Raccess  (46)
	Expression : Expression . '.' Length  (47)
	Expression : Expression . '.' Identifier LBracket Expressions RBracket  (48)

	And  shift 96
	RBracket  shift 104
	Laccess  shift 98
	'.'  shift 99
	'*'  shift 100
	'+'  shift 101
	'-'  shift 102
	'<'  shift 103
	.  error


state 86
	Statement : Println LBracket Expression . RBracket Semicolon  (34)
	Expression : Expression . And Expression  (41)
	Expression : Expression . '<' Expression  (42)
	Expression : Expression . '+' Expression  (43)
	Expression : Expression . '-' Expression  (44)
	Expression : Expression . '*' Expression  (45)
	Expression : Expression . Laccess Expression Raccess  (46)
	Expression : Expression . '.' Length  (47)
	Expression : Expression . '.' Identifier LBracket Expressions RBracket  (48)

	And  shift 96
	RBracket  shift 105
	Laccess  shift 98
	'.'  shift 99
	'*'  shift 100
	'+'  shift 101
	'-'  shift 102
	'<'  shift 103
	.  error


state 87
	Statement : Lbrace Statements Rbrace .  (31)

	.  reduce 31


state 88
	Statement : Identifier Laccess Expression . Raccess '=' Expression Semicolon  (36)
	Expression : Expression . And Expression  (41)
	Expression : Expression . '<' Expression  (42)
	Expression : Expression . '+' Expression  (43)
	Expression : Expression . '-' Expression  (44)
	Expression : Expression . '*' Expression  (45)
	Expression : Expression . Laccess Expression Raccess  (46)
	Expression : Expression . '.' Length  (47)
	Expression : Expression . '.' Identifier LBracket Expressions RBracket  (48)

	And  shift 96
	Raccess  shift 106
	Laccess  shift 98
	'.'  shift 99
	'*'  shift 100
	'+'  shift 101
	'-'  shift 102
	'<'  shift 103
	.  error


state 89
	Statement : Identifier '=' Expression . Semicolon  (35)
	Expression : Expression . And Expression  (41)
	Expression : Expression . '<' Expression  (42)
	Expression : Expression . '+' Expression  (43)
	Expression : Expression . '-' Expression  (44)
	Expression : Expression . '*' Expression  (45)
	Expression : Expression . Laccess Expression Raccess  (46)
	Expression : Expression . '.' Length  (47)
	Expression : Expression . '.' Identifier LBracket Expressions RBracket  (48)

	And  shift 96
	Semicolon  shift 107
	Laccess  shift 98
	'.'  shift 99
	'*'  shift 100
	'+'  shift 101
	'-'  shift 102
	'<'  shift 103
	.  error


state 90
	MainClass : Class Identifier Lbrace Public Static Void Main LBracket String Laccess Raccess Identifier RBracket Lbrace Statement Rbrace Rbrace .  (2)

	.  reduce 2


state 91
	MethodDeclaration : Public Type Identifier LBracket TypeIdentifiers RBracket Lbrace VarDeclarations Statements Return Expression . Semicolon Rbrace  (17)
	Expression : Expression . And Expression  (41)
	Expression : Expression . '<' Expression  (42)
	Expression : Expression . '+' Expression  (43)
	Expression : Expression . '-' Expression  (44)
	Expression : Expression . '*' Expression  (45)
	Expression : Expression . Laccess Expression Raccess  (46)
	Expression : Expression . '.' Length  (47)
	Expression : Expression . '.' Identifier LBracket Expressions RBracket  (48)

	And  shift 96
	Semicolon  shift 108
	Laccess  shift 98
	'.'  shift 99
	'*'  shift 100
	'+'  shift 101
	'-'  shift 102
	'<'  shift 103
	.  error


state 92
	Expression : New Integer . Laccess Expression Raccess  (53)

	Laccess  shift 109
	.  error


state 93
	Expression : New Identifier . LBracket RBracket  (54)

	LBracket  shift 110
	.  error


state 94
	Expression : Expression . And Expression  (41)
	Expression : Expression . '<' Expression  (42)
	Expression : Expression . '+' Expression  (43)
	Expression : Expression . '-' Expression  (44)
	Expression : Expression . '*' Expression  (45)
	Expression : Expression . Laccess Expression Raccess  (46)
	Expression : Expression . '.' Length  (47)
	Expression : Expression . '.' Identifier LBracket Expressions RBracket  (48)
	Expression : LBracket Expression . RBracket  (56)

	And  shift 96
	RBracket  shift 111
	Laccess  shift 98
	'.'  shift 99
	'*'  shift 100
	'+'  shift 101
	'-'  shift 102
	'<'  shift 103
	.  error


state 95
	Expression : Expression . And Expression  (41)
	Expression : Expression . '<' Expression  (42)
	Expression : Expression . '+' Expression  (43)
	Expression : Expression . '-' Expression  (44)
	Expression : Expression . '*' Expression  (45)
	Expression : Expression . Laccess Expression Raccess  (46)
	Expression : Expression . '.' Length  (47)
	Expression : Expression . '.' Identifier LBracket Expressions RBracket  (48)
	Expression : '!' Expression .  (55)

	.  reduce 55


state 96
	Expression : Expression And . Expression  (41)
